[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/enemy2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://textures/enemy1.png" type="Texture" id=3]
[ext_resource path="res://scenes/Nani.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/alert.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=3]

[node name="Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
ps_nani = ExtResource( 4 )
speed = 240.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Sprites"]
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
